[tool.poetry]
name = "streamlit-api-workshop"
version = "0.1.0"
description = "Aplicação Streamlit para gerenciar produtos"
authors = ["Luiz Fernando <luizfsoliveira.lm@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*" }]  # Inclui todos os arquivos e pastas do projeto

# Adicionar essa configuração para evitar erros de empacotamento
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
plotly = "^5.24.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
